--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,17 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activities.MyGpsActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait"
+            />
 
+        <activity android:name=".activities.ShowLocationActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait"
+            />
         <!--<activity-->
             <!--android:name="com.example.androidgeotest.activities.MainMenuActivity"-->
             <!--android:configChanges="orientation|keyboardHidden"-->
