--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,11 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".activities.MapLocationActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait" />
         <!-- <activity -->
         <!-- android:name="com.example.androidgeotest.activities.MainMenuActivity" -->
         <!-- android:configChanges="orientation|keyboardHidden" -->
@@ -87,7 +92,7 @@
         <activity
             android:name=".activities.FusedLocationActivity"
             android:label="@string/title_activity_fused_location"
-            android:theme="@style/MyAppTheme"></activity>
+            android:theme="@style/MyAppTheme" />
     </application>
 
 </manifest>
