--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,18 +45,25 @@ dependencies {
     compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
     compile 'com.mikepenz:community-material-typeface:1.5.54.1@aar'
     compile 'com.mikepenz:foundation-icons-typeface:3.0.0.1@aar'
-    compile 'com.google.android.gms:play-services-ads:9.0.1'
+    compile 'com.google.android.gms:play-services-ads:9.0.2'
     compile 'com.github.quentin7b:android-location-tracker:3.2'
 
     /*maps*/
-    compile 'com.google.android.gms:play-services-maps:9.0.1'
-    compile 'com.google.android.gms:play-services-location:9.0.1'
+    compile 'com.google.android.gms:play-services-maps:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
 
     /* ormlite */
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 
     /* firebase */
-    compile 'com.firebase:firebase-client-android:2.5.2+'
-
+//Storage
+    compile "com.google.firebase:firebase-database:9.0.2"
+//Analytics
+    compile 'com.google.firebase:firebase-core:9.0.2'
+//Realtime Database
+    compile 'com.google.firebase:firebase-database:9.0.2'
+//    authentication
+    compile 'com.google.firebase:firebase-auth:9.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
