--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,8 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.0.2'
 //Realtime Database
     compile 'com.google.firebase:firebase-database:9.0.2'
-//    authentication
+//Authentication
     compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'com.google.android.gms:play-services-auth:9.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
