--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,26 +45,26 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <!--<activity android:name=".activities.Main">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+        <activity android:name=".activities.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
-
-        <activity android:name=".activities.MainMenuActivity">
-        <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-
-        <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-        <!--<activity android:name=".activities.MainMenuActivity"-->
-        <!--android:configChanges="orientation|keyboardHidden"-->
-        <!--android:label="@string/app_name"-->
-        <!--android:screenOrientation="sensorPortrait" />-->
+        <!--<activity android:name=".activities.MainMenuActivity">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
+
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <activity android:name=".activities.MainMenuActivity"
+        android:configChanges="orientation|keyboardHidden"
+        android:label="@string/app_name"
+        android:screenOrientation="sensorPortrait" />
 
         <activity
             android:name=".activities.MyGpsActivity"
