--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,8 @@ dependencies {
 //Authentication
     compile 'com.google.firebase:firebase-auth:9.0.2'
     compile 'com.google.android.gms:play-services-auth:9.0.2'
+
+    //stetho
+    compile 'com.facebook.stetho:stetho:1.3.1'
 }
 apply plugin: 'com.google.gms.google-services'
