--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,7 +82,7 @@
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait" />
         <activity
-            android:name=".activities.RunningActivity"
+            android:name=".activities.running.RunningActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait" />
@@ -109,10 +109,10 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait" />
-        <activity
-            android:name=".activities.FusedLocationActivity"
-            android:label="@string/title_activity_fused_location"
-            android:theme="@style/MyAppTheme" />
+        <!--<activity-->
+            <!--android:name=".activities.FusedLocationActivity"-->
+            <!--android:label="@string/title_activity_fused_location"-->
+            <!--android:theme="@style/MyAppTheme" />-->
     </application>
 
 </manifest>
