--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,17 @@ dependencies {
 
     //stetho
     compile 'com.facebook.stetho:stetho:1.3.1'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
+
+//freezer sqlite
+apply plugin: 'com.neenbedankt.android-apt'
+
+
+dependencies {
+    compile 'fr.xebia.android.freezer:freezer:2.0.3'
+    provided 'fr.xebia.android.freezer:freezer-annotations:2.0.3'
+    apt 'fr.xebia.android.freezer:freezer-compiler:2.0.3'
+}
