--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".activities.LoginActivity">
+        <activity android:name=".activities.auth.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -60,7 +60,10 @@
         <!--<category android:name="android.intent.category.LAUNCHER" />-->
         <!--</intent-filter>-->
         <!--</activity>-->
-
+        <activity android:name=".activities.auth.SignInActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait" />
         <activity android:name=".activities.MainMenuActivity"
         android:configChanges="orientation|keyboardHidden"
         android:label="@string/app_name"
@@ -73,11 +76,6 @@
             android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".activities.ShowLocationActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name"
-            android:screenOrientation="sensorPortrait" />
-        <activity
-            android:name=".activities.RunActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait" />
