--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
 
         classpath 'com.google.gms:google-services:3.0.0'
+
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,9 +19,14 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
+        maven {
+            url  "http://dl.bintray.com/florent37/maven"
+        }
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
