--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguardrules.pro'
         }
     }
 }
@@ -45,12 +45,12 @@ dependencies {
     compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
     compile 'com.mikepenz:community-material-typeface:1.5.54.1@aar'
     compile 'com.mikepenz:foundation-icons-typeface:3.0.0.1@aar'
-    compile 'com.google.android.gms:play-services-ads:9.0.2'
+    compile 'com.google.android.gms:play-services-ads:9.2.0'
     compile 'com.github.quentin7b:android-location-tracker:3.2'
 
     /*maps*/
-    compile 'com.google.android.gms:play-services-maps:9.0.2'
-    compile 'com.google.android.gms:play-services-location:9.0.2'
+    compile 'com.google.android.gms:play-services-maps:9.2.0'
+    compile 'com.google.android.gms:play-services-location:9.2.0'
 
     /* ormlite */
     compile 'com.j256.ormlite:ormlite-core:4.48'
@@ -58,17 +58,14 @@ dependencies {
 
     /* firebase */
 //Storage
-    compile "com.google.firebase:firebase-database:9.0.2"
+    compile "com.google.firebase:firebase-database:9.2.0"
 //Analytics
-    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.firebase:firebase-core:9.2.0'
 //Realtime Database
-    compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.google.firebase:firebase-database:9.2.0'
 //Authentication
-    compile 'com.google.firebase:firebase-auth:9.0.2'
-    compile 'com.google.android.gms:play-services-auth:9.0.2'
-
-    //stetho
-    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.google.firebase:firebase-auth:9.2.0'
+    compile 'com.google.android.gms:play-services-auth:9.2.0'
 
 
 }
