Login funzionante...assettare la parte dei permessi ---aggiustata la parte del LocationService LocationServices.FusedLocationApi.removeLocationUpdates(mGoogleApiClient, this);

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     //maps utils
     compile 'com.google.maps.android:android-maps-utils:0.4.3'
 
+    //sensor utils
+    compile project(':dsensor');
 }
 apply plugin: 'com.google.gms.google-services'
 
