--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -88,6 +89,12 @@
 
         <activity
             android:name=".activities.excursion.ExcursionActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait" />
+
+        <activity
+            android:name=".activities.excursion.CompassActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait" />
