--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.mikepenz:iconics-core:2.5.9@aar'
     compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
     compile 'com.mikepenz:community-material-typeface:1.5.54.1@aar'
+    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
     compile 'com.mikepenz:foundation-icons-typeface:3.0.0.1@aar'
     compile 'com.google.android.gms:play-services-ads:9.2.0'
     compile 'com.github.quentin7b:android-location-tracker:3.2'
