--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,12 @@
             android:screenOrientation="sensorPortrait" />
 
         <activity
+            android:name=".activities.excursion.ExcursionActivity2"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait" />
+
+        <activity
             android:name=".activities.MapLocationActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
